--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,4 +1,3 @@
-
 name: 部署文档
 
 on:
@@ -20,9 +19,10 @@ jobs:
           # 如果你文档需要 Git 子模块，取消注释下一行
           # submodules: true
 
-      - name: 设置 pnpm
+      - name: Setup pnpm
         uses: pnpm/action-setup@v4
-
+        with:
+          version: 8
 
       - name: 设置 Node.js
         uses: actions/setup-node@v4
