--- a/package.json
+++ b/package.json
@@ -16,5 +16,6 @@
     "vue": "^3.5.13",
     "vuepress": "2.0.0-rc.19",
     "vuepress-theme-hope": "2.0.0-rc.66"
-  }
+  },
+  "packageManager": "pnpm@8.15.4"
 }
